--- a/voltronic_mqtt/config.json
+++ b/voltronic_mqtt/config.json
@@ -5,6 +5,7 @@
   "description": "Publie les données de l'onduleur Voltronic sur MQTT",
   "startup": "services",
   "boot": "auto",
+  "arch": ["aarch64", "amd64", "armv7"],
   "hassio_api": false,
   "host_network": true,
   "privileged": ["SYS_ADMIN"],
@@ -23,5 +24,6 @@
     "mqtt_user": "str",
     "mqtt_password": "str"
   },
+  "url": "https://github.com/Pa70u/a-voltronic-mqtt-addon",
   "image": "ghcr.io/ned-kelly/docker-voltronic-homeassistant:latest"
 }
