--- a/voltronic_mqtt/config.json
+++ b/voltronic_mqtt/config.json
@@ -5,6 +5,8 @@
   "description": "Publie les données de l'onduleur Voltronic sur MQTT",
   "startup": "services",
   "boot": "auto",
+  "stage": "experimental",
+  "init": false,
   "arch": ["aarch64", "amd64", "armv7"],
   "hassio_api": false,
   "host_network": true,
@@ -15,7 +17,7 @@
     "mqtt_host": "127.0.0.1",
     "mqtt_port": 1883,
     "mqtt_user": "mqtt_user",
-    "mqtt_password": "CHANGE_ME"
+    "mqtt_password": "Rzuug3df1!!"
   },
   "schema": {
     "serial_port": "str",
