--- a/voltronic_mqtt/config.json
+++ b/voltronic_mqtt/config.json
@@ -1,5 +1,29 @@
-"stage": "experimental",
-"init": false,
-"arch": ["aarch64", "amd64", "armv7"],
-"url": "https://github.com/Pa70u/a-voltronic-mqtt-addon",
-"image": "ghcr.io/ned-kelly/docker-voltronic-homeassistant:latest"
+{
+  "name": "Voltronic MQTT",
+  "version": "1.0.0",
+  "slug": "voltronic_mqtt",
+  "description": "Publie les données de l'onduleur Voltronic sur MQTT",
+  "startup": "services",
+  "boot": "auto",
+  "stage": "experimental",
+  "init": false,
+  "arch": ["aarch64", "amd64", "armv7"],
+  "hassio_api": false,
+  "host_network": true,
+  "privileged": ["SYS_ADMIN"],
+  "devices": ["/dev/serial/by-id/:/dev/serial/by-id/:rwm"],
+  "options": {
+    "serial_port": "/dev/serial/by-id/usb-FTDI_FT231X_USB_UART_ABC123-if00-port0",
+    "mqtt_host": "127.0.0.1",
+    "mqtt_port": 1883,
+    "mqtt_user": "mqtt_user",
+    "mqtt_password": "CHANGE_ME"
+  },
+  "schema": {
+    "serial_port": "str",
+    "mqtt_host": "str",
+    "mqtt_port": "int",
+    "mqtt_user": "str",
+    "mqtt_password": "str"
+  },
+  "url": "https://github.com/Pa70u/a-voltron
